helm/2-section/nginx/nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 80

######################

# kubectl create service clusterip nginx-svc \                                                                                                         ─╯
# --tcp=8080:80 \
# --dry-run=client \
# -o yaml
