helm/2-section/nginx/nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-svc
  name: nginx-svc
spec:
  selector:
    app: frontend
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-svc
  type: LoadBalancer
status:
  loadBalancer: {}


# kubectl create service loadbalancer nginx-svc \
#   --tcp=8080:80 \
#   --dry-run=client \
#   -o yaml > nginx-service.yaml
